Work on project; - Added Lightbox gallery plugin to project. - Changed double-click to use right click instead - Single clicks open galley plugin - Wrapped all images in anchor tags  and adapted code to work with it. - -some issues to resolve regarding anchor styling and gallery resizing.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,232 @@
+/* line 1, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+body.lb-disable-scrolling {
+  overflow: hidden;
+}
+
+/* line 5, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lightboxOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: black;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+  display: none;
+}
+
+/* line 16, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lightbox {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+  text-align: center;
+  line-height: 0;
+  font-weight: normal;
+  outline: none;
+}
+
+/* line 27, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lightbox .lb-image {
+  display: block;
+  height: auto;
+  max-width: inherit;
+  max-height: none;
+  border-radius: 3px;
+  /* Image border */
+  border: 4px solid white;
+}
+
+/* line 38, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lightbox a img {
+  border: none;
+}
+
+/* line 42, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-outerContainer {
+  position: relative;
+  *zoom: 1;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  border-radius: 4px;
+  /* Background color behind image.
+     This is visible during transitions. */
+  background-color: white;
+}
+
+/* line 55, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-outerContainer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* line 61, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-loader {
+  position: absolute;
+  top: 43%;
+  left: 0;
+  height: 25%;
+  width: 100%;
+  text-align: center;
+  line-height: 0;
+}
+
+/* line 71, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-cancel {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin: 0 auto;
+  background: url(../images/loading.gif) no-repeat;
+}
+
+/* line 79, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+}
+
+/* line 88, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-container > .nav {
+  left: 0;
+}
+
+/* line 92, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav a {
+  outline: none;
+  background-image: url("data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==");
+}
+
+/* line 97, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-prev, .lb-next {
+  height: 100%;
+  cursor: pointer;
+  display: block;
+}
+
+/* line 103, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav a.lb-prev {
+  width: 34%;
+  left: 0;
+  float: left;
+  background: url(../images/prev.png) left 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+}
+
+/* line 116, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav a.lb-prev:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+/* line 121, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav a.lb-next {
+  width: 64%;
+  right: 0;
+  float: right;
+  background: url(../images/next.png) right 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+}
+
+/* line 134, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-nav a.lb-next:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+/* line 139, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-dataContainer {
+  margin: 0 auto;
+  padding-top: 5px;
+  *zoom: 1;
+  width: 100%;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+/* line 148, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-dataContainer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* line 154, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data {
+  padding: 0 4px;
+  color: #ccc;
+}
+
+/* line 159, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-details {
+  width: 85%;
+  float: left;
+  text-align: left;
+  line-height: 1.1em;
+}
+
+/* line 166, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-caption {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 1em;
+}
+
+/* line 172, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-caption a {
+  color: #4ae;
+}
+
+/* line 176, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-number {
+  display: block;
+  clear: left;
+  padding-bottom: 1em;
+  font-size: 12px;
+  color: #999999;
+}
+
+/* line 184, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-close {
+  display: block;
+  float: right;
+  width: 30px;
+  height: 30px;
+  background: url(../images/close.png) top right no-repeat;
+  text-align: right;
+  outline: none;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+/* line 200, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/css/lightbox.css */
+.lb-data .lb-close:hover {
+  cursor: pointer;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
 /* line 8, ../../Users/paulr/Desktop/Netmatters/JavaScript Array Reflection/scss/2.base/_1.normalize.scss */
 html {
   font-family: sans-serif;
